# engnr-nsu-cpp-2021

./: .gitmodules  README.md
.github/buildsteps/linux/: build.sh  install-dependencies.sh  run-unittests.sh
.github/buildsteps/macos/: build.sh
.github/buildsteps/windows/: build.bat  install-dependencies.bat  run-unittests.bat
.github/functional-testing/: main.py
.github/functional-testing/ftlib/: status_code_checkers.py  stdostreams_content_checkers.py
.github/functional-testing/resources/: tests_config.json
.github/functional-testing/resources/lab1/test_10bytes/: file  reference-sum64.txt
.github/functional-testing/resources/lab1/test_11bytes/: file
.github/functional-testing/resources/lab1/test_12bytes/: file  reference-sum64.txt
.github/functional-testing/resources/lab1/test_13bytes/: file  reference-adler32.txt  reference-sum64.txt
.github/functional-testing/resources/lab1/test_14bytes/: reference-adler32.txt
.github/workflows/: ci.yml
1/: CMakeLists.txt  Hashfunc.cpp  Hashfunc.h  main.cpp
1/.github/buildsteps/linux/: run-custom-functionaltests.sh
1/.github/buildsteps/macos/: run-custom-functionaltests.sh
1/.github/buildsteps/windows/: run-custom-functionaltests.bat
1/.github/functional-testing/ftlib/: executable_test.py  ftutil.py
1/.github/functional-testing/resources/lab1/: .gitattributes
1/.github/functional-testing/resources/lab1/test_10bytes/: reference-adler32.txt
1/.github/functional-testing/resources/lab1/test_11bytes/: reference-adler32.txt  reference-sum64.txt
1/.github/functional-testing/resources/lab1/test_12bytes/: reference-adler32.txt
1/.github/functional-testing/resources/lab1/test_14bytes/: file  reference-sum64.txt
1/.github/functional-testing/resources/lab1/test_15bytes/: reference-adler32.txt
1/.github/functional-testing/resources/lab1/test_16bytes/: reference-adler32.txt  reference-sum64.txt
1/.github/functional-testing/resources/lab1/test_4bytes/: file
1/.github/functional-testing/resources/lab1/test_4bytes-polynom/: file
1/.github/functional-testing/resources/lab1/test_5bytes/: file  reference-adler32.txt
1/.github/functional-testing/resources/lab1/test_6bytes/: reference-adler32.txt  reference-sum64.txt
1/.github/functional-testing/resources/lab1/test_7bytes/: reference-sum64.txt
1/.github/functional-testing/resources/lab1/test_8bytes/: file  reference-adler32.txt  reference-sum64.txt
1/.github/functional-testing/resources/lab1/test_9bytes/: file  reference-sum64.txt
1/.github/functional-testing/resources/lab1/test_png/: reference-adler32.txt
1/build_cmake/: CMakeCache.txt
3/: CMakeLists.txt  LinkedList.h  LinkedList_tests.cpp  main.cpp
3/src/LinkedList/: CMakeLists.txt
3/src/main/: CMakeLists.txt  main.cpp
3/test/: CMakeLists.txt  LinkedList_tests.cpp
(+21 files in other folders)
